# lib

./: CMakeLists.txt  OFPLib.pc.in  OFPLibConfig.cmake.in  README.md  example.cpp
example/: CMakeLists.txt
include/: FoodItem.h  NutrientUnion.h  OFPManager.h  ServingSize.h
src/: FoodItem.cpp  OFPManager.cpp  ServingSize.cpp
